fix: adjust tag page spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -181,6 +181,10 @@ li {
   opacity: 0.9;
 }
 
+.tag-section h2 {
+  margin-top: 2.5em;
+}
+
 .content {
   margin-top: 20px;
   color: #333;
@@ -201,8 +205,8 @@ li {
 }
 
 .post-list li {
-  margin-bottom: 2em;
-  padding-bottom: 1.5em;
+  margin-bottom: 0.75em;
+  padding-bottom: 1em;
   border-bottom: 2px solid #eee;
 }
 
